<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_cmd"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_wait"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_duration"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/parameter_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/defaultBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_default"/>
        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_screen_save"/>

    </LinearLayout>


</LinearLayout>